[tool.poetry]
name = "day-28"
version = "0.1.0"
description = ""
authors = ["GabdullinAleksandr <alexrexp@gmail.com>"]
readme = "README.md"
packages = [{include = "day_28"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
